<resources>
    <string name="app_name">PhoneGuard</string>
    <string name="settings">PhoneGuard</string>
    <string name="test_activity">Test activity</string>
    
    <string name="start_settings_activity">Start settings activity</string>
    <string name="start_emergency_state">Start emergency state</string>
    <string name="sec10">10 seconds</string>
    <string name="sec30">30 seconds</string>
    <string name="sec60">60 seconds</string>
    <string name="stop_emergency_state">Stop emergency state</string>
    <string name="display_shared_preferences">Display shared preferences</string>
    <string name="display_device_data">Display device data</string>
    <string name="display_location_data">Display location data</string>
    
    <string name="preferred_communication">Preferred communication mode</string>
    <string name="preferred_communication_summary">Preferred communication mode in emergency state.</string>
    <string name="preferred_communication_title">Preferred communication mode</string>
        
    <string name="phone_number">Telephone number</string>    
    <string name="phone_number_summary">Telephone number where the application 
        									sends SMS in emergency state.</string>        
    
    <string name="password">Password</string>    
    <string name="password_summary">Password to use the application from remote
        							(needs in every SMS to control the application).</string>
        							
    <string name="emergency_frequency">Update frequency</string>    
    <string name="emergency_frequency_summary">How often the application sends update about the 
        									   location of the phone in an emergency state.</string>
    <string name="emergency_frequency_title">Update frequency</string>
</resources>
