<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <Button
        android:id="@+id/start_settings_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_settings_activity" />

    <Button
        android:id="@+id/start_emergency_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_emergency_state" />
    
    <Button
        android:id="@+id/sec10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec10" />
    
    <Button
        android:id="@+id/sec30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec30" />
      
    <Button
        android:id="@+id/sec60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sec60" />
    
     <Button
        android:id="@+id/stop_emergency_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_emergency_state" />

     <Button
        android:id="@+id/display_shared_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_shared_preferences" /> 
     
    <Button
        android:id="@+id/display_device_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_device_data" />

    <Button
        android:id="@+id/display_location_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_location_data" />

    <TextView
        android:id="@+id/displayData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
</ScrollView>